# IMAGING-PIPELINE-SIM

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
imaging_pipeline/optics/: optics_model.py
imaging_pipeline/scenes/: scene_generator.py
imaging_pipeline/sensor/: sensor_model.py
imaging_pipeline/utils/: metrics_module.py
outputs/: after_optics.npy  scene.npy  sensor_dn_norm.npy  sensor_electrons.npy
src/: main.py  main_classic.py  main_full.py
src/imaging_pipeline/: __init__.py
src/imaging_pipeline/optics/: __init__.py  optics_model.py
src/imaging_pipeline/scenes/: scene_generator.py
src/imaging_pipeline/sensor/: __init__.py  sensor_model.py
src/imaging_pipeline/utils/: __init__.py  metrics_module.py
