[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imaging-pipeline-sim"
version = "0.1.0"
description = "End-to-end imaging pipeline: scene → optics → sensor → metrics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ali Pouya" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "opencv-python>=4.9",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "pydantic>=2.7",
  "typer>=0.12"
]

[project.optional-dependencies]
ui = ["streamlit>=1.38"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "black>=24.8", "pre-commit>=3.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
